--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ class="fixed inset-0 bg-black/40 hidden items-center justify-center z-50">
 
 
 
-    <div id="mainDashboard" class="hidden min-h-screen md:flex flex-row">
+    <div id="mainDashboard" class="hidden min-h-screen flex">
 
         <aside class="w-80 bg-white shadow-2xl border-r border-pink-50 flex flex-col p-6 z-50">
 
@@ -1156,29 +1156,42 @@ function editCustomer(index){
 
 }
 
-/* --- ก๊อปปี้ส่วนนี้ไปวางทับฟังก์ชัน renderCustomerTable เดิม --- */
+
+
+
+
+
+
+/* --- render ตาราง (ฉบับแก้ไขรูปภาพ Responsive) --- */
 function renderCustomerTable(data) {
     const tbody = document.getElementById("customerTableBody");
     if (!tbody) return;
     tbody.innerHTML = "";
 
     const limitedData = data.slice(0, currentPageSize);
+
     limitedData.forEach((c, index) => {
         const realIndex = customerDB.findIndex(item => item.hn === c.hn);
+
         tbody.innerHTML += `
             <tr class="border-b hover:bg-pink-50 transition">
                 <td class="p-3">${index + 1}</td>
                 <td class="p-3">
-                    <img src="${c.photo || 'https://via.placeholder.com/150'}" class="customer-photo shadow-sm"> 
+                    <img src="${c.photo || 'https://via.placeholder.com/40'}" 
+                         class="customer-photo shadow-sm"> 
                 </td>
+                <td class="p-3">${c.createdAt || '-'}</td>
                 <td class="p-3 font-bold">${c.hn || '-'}</td>
                 <td class="p-3">${c.fullname || '-'}</td>
+                <td class="p-3">${c.nickname || '-'}</td>
                 <td class="p-3">${c.phone || '-'}</td>
-                <td class="p-3 text-center">
+                <td class="p-3">${c.branch || '-'}</td>
+                <td class="p-3 text-center space-x-2">
                     <button onclick="openModalForEdit(${realIndex})" class="text-blue-500 font-bold">แก้ไข</button>
+                    <button onclick="deleteCustomer(${realIndex})" class="text-red-500 font-bold">ลบ</button>
                 </td>
             </tr>`;
-    }); // <--- ตรวจสอบปิดปีกกาตรงนี้ให้ครบนะคะ
+    });
 }
       
 
