--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ class="fixed inset-0 bg-black/40 hidden items-center justify-center z-50">
 
 
 
-   <div id="mainDashboard" class="hidden min-h-screen md:flex flex-row">
+   <div id="mainDashboard" class="hidden min-h-screen flex flex-col md:flex-row">
 
         <aside class="w-80 bg-white shadow-2xl border-r border-pink-50 flex flex-col p-6 z-50">
 
